# HIDShift

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  about.hbs  about.toml  mise.toml
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml
device-firmware/: Cargo.toml
device-firmware/src/: boot_presentation.rs  main.rs  profile_store.rs  usb_dynamic.rs  usb_fallback.rs  usb_signaling.rs
docs/: driver-architecture.md  dual-s3.md  management-protocol.md
e2e/: README.md  baseline.json
e2e/fixtures/mirror/: composite-a.hsmi  invalid-duplicate-endpoint.hsmi  mouse-b.hsmi
e2e/mirror-runner/: Cargo.toml
e2e/mirror-runner/src/: main.rs
e2e/probe-firmware/: Cargo.toml
e2e/probe-firmware/src/: main.rs
e2e/runner/: Cargo.toml
e2e/runner/src/: board.rs  main.rs  metrics.rs
examples/: generate_mirror_fixtures.rs
firmware/: Cargo.toml
firmware/src/: e2e_telemetry.rs  main.rs  wired_management.rs
firmware/src/platform/: ble_bonds.rs  ble_hid_task.rs  espnow_link_task.rs  espnow_output.rs  flash_backend.rs  mirror_e2e_fault.rs  mirror_spi_task.rs  mod.rs  serial_management_task.rs  storage_task.rs  transport_route.rs  usb_host_task.rs  usb_output_transport.rs  usb_transport.rs
partitions/: bridge.csv
src/: ble.rs  ble_connection.rs  ble_notify.rs  ble_runtime.rs  checksum.rs  e2e.rs  e2e_mirror.rs  espnow_pairing.rs  espnow_pairing_management.rs  espnow_security.rs  fallback.rs  ids.rs  lib.rs  management.rs  mouse_accumulator.rs  output_target.rs  remote_wakeup.rs  routing.rs  runtime.rs  settings.rs  storage.rs  target_control.rs  transport.rs
src/bridge/: host_state.rs  mod.rs  pairing.rs
src/input/: aggregator.rs  consumer.rs  keyboard.rs  leds.rs  mod.rs  mouse.rs  movement_queue.rs  vendor.rs
src/interchip/: cell.rs  control_fragment.rs  device.rs  message.rs  mod.rs  profile_transfer.rs  record.rs  reliable.rs
src/link/: composite.rs  input_record.rs  input_scheduler.rs  message.rs  mod.rs  sequence.rs  session.rs  snapshot.rs  state_refresh.rs  watchdog.rs  wire.rs
src/mirror/: candidate.rs  capture.rs  control.rs  image.rs  mod.rs  parser.rs  plan.rs  store.rs  validator.rs
src/platform/esp32s3/: ble_hid_task.rs  button_task.rs  flash_backend.rs  mod.rs  serial_diagnostic_task.rs  storage_task.rs  usb_host_task.rs
src/reports/: ble_consumer.rs  ble_hid.rs  ble_keyboard.rs  ble_mouse.rs  mod.rs
src/runtime/: bootstrap.rs  driver.rs  message.rs  owner.rs
src/usb_hid/: boot_keyboard.rs  frame.rs  host_interface.rs  host_output.rs  host_runtime.rs  mod.rs  output.rs  report.rs  runtime_adapter.rs  source.rs  test_fixtures.rs  topology.rs
tests/: hid_public_fixtures.rs  mirror_fixtures.rs
tools/hidshift-client/: Cargo.toml
tools/hidshift-client/src/: lib.rs
tools/hidshiftctl/: Cargo.toml
tools/hidshiftctl/src/: main.rs
tools/release/: check_release_version.py  test_check_release_version.py
web/: Cargo.toml  index.html  style.css
web/src/: app.rs  browser_client.rs  main.rs  settings_ui.rs  transport.rs
