[package]
name = "hidshift"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Multi-host USB HID switch over Bluetooth LE for ESP32-S3"
license = "MIT"
readme = "README.md"
repository = "https://github.com/abco20/HIDShift"
publish = false

[workspace]
members = ["firmware"]
default-members = ["."]
exclude = ["tools/hidshift-client", "tools/hidshiftctl", "web"]
resolver = "3"

[lib]
name = "hidshift"
path = "src/lib.rs"

[dependencies]
bitflags = "2.10.0"
embedded-storage = "0.3.1"
heapless = "0.9.2"

[dev-dependencies]
embassy-usb-host = "0.1.0"
hidreport = { version = "0.6.0", default-features = false }

[patch.crates-io]
embassy-usb-synopsys-otg = { path = "vendor/embassy-usb-synopsys-otg-0.4.0" }

[profile.dev]
debug = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"
