[package]
name = "hidshift"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Multi-host USB HID switch over Bluetooth LE for ESP32-S3"
license = "MIT"
readme = "README.md"
repository = "https://github.com/abco20/HIDShift"
publish = false

[workspace]
members = ["firmware"]
default-members = ["."]
exclude = [
    "device-firmware",
    "e2e/probe-firmware",
    "e2e/runner",
    "e2e/mirror-runner",
    "tools/hidshift-client",
    "tools/hidshiftctl",
    "vendor/trouble-host-0.6.0",
    "vendor/usb-device-0.3.2",
    "web",
]
resolver = "3"

[lib]
name = "hidshift"
path = "src/lib.rs"

[[example]]
name = "generate_mirror_fixtures"
path = "examples/generate_mirror_fixtures.rs"
required-features = ["dual-s3-wired"]

[features]
default = []
# Enables the transport-independent wired-output and dual-ESP32 core. Hardware
# integration is enabled separately by the firmware crate feature of the same
# name, so the default single-S3 BLE firmware keeps its current resource use.
dual-s3-wired = []
# Test-only synthetic Mirror transport. Firmware propagates this exclusively
# from its hardware-e2e build so production binaries contain no fixture API.
hardware-e2e = []

[dependencies]
bitflags = "2.10.0"
embedded-storage = "0.3.1"
heapless = "0.9.2"

[dev-dependencies]
embassy-usb-host = "0.1.0"
hidreport = { version = "0.6.0", default-features = false }

[patch.crates-io]
embassy-usb-synopsys-otg = { path = "vendor/embassy-usb-synopsys-otg-0.4.0" }
# trouble-host 0.6.0 starts the optional Link Layer connection-parameter
# procedure before its L2CAP fallback. Some Linux centrals reject that LL
# procedure asynchronously, after the API has already returned success, so the
# fallback is never reached. The local patch exposes an explicit peripheral
# L2CAP request used by the low-latency HID connection policy.
trouble-host = { path = "vendor/trouble-host-0.6.0" }

[profile.dev]
debug = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"
