[package]
name = "hidshift-device-firmware"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
publish = false

[[bin]]
name = "hidshift-device"
path = "src/main.rs"

[dependencies]
esp-backtrace = { version = "0.19.0", default-features = false, features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-hal = { version = "1.1.1", default-features = false, features = ["esp32s3", "rt", "unstable"] }
esp-println = { version = "0.17.0", default-features = false, features = ["critical-section", "esp32s3", "log-04", "uart"] }
hidshift = { path = "..", features = ["dual-s3-wired"] }
heapless = "0.9.2"
log = "0.4.33"
static_cell = "2.1.1"
usb-device = "0.3.2"

[profile.dev]
debug = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"
