[package]
name = "hidshift-firmware"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
publish = false

[[bin]]
name = "firmware"
path = "src/main.rs"

[features]
default = []
diagnostic-input = []

[dependencies]
embassy-executor = "0.10.0"
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-time = "0.5.1"
embassy-usb-driver = "0.2.2"
embassy-usb-host = "0.1.0"
embassy-usb-synopsys-otg = { version = "0.4.0", features = ["host"] }
esp-alloc = { version = "0.10.0", default-features = false, features = ["compat", "esp32s3", "global-allocator"] }
esp-backtrace = { version = "0.19.0", default-features = false, features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-hal = { version = "1.1.1", default-features = false, features = ["__bluetooth", "esp32s3", "unstable"] }
esp-println = { version = "0.17.0", default-features = false, features = ["esp32s3", "log-04", "uart"] }
esp-radio = { version = "1.0.0-beta.0", default-features = false, features = ["ble", "esp-alloc", "esp32s3", "log-04", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "esp-alloc", "esp-radio", "esp32s3"] }
esp-storage = { version = "0.9.0", default-features = false, features = ["esp32s3"] }
esp-synopsys-usb-otg = "0.4.2"
hidshift = { path = ".." }
heapless = "0.9.2"
log = "0.4.33"
static_cell = "2.1.1"
trouble-host = { version = "0.6.0", default-features = false, features = ["default-packet-pool", "derive", "gatt", "log", "peripheral", "security"] }
