[package]
name = "hidshift-firmware"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
publish = false

[[bin]]
name = "firmware"
path = "src/main.rs"

[[bin]]
name = "bridge-device"
path = "src/bin/bridge-device.rs"
required-features = ["espnow-device"]

[features]
default = ["ble"]
ble = ["esp-radio/ble"]
diagnostic-input = []
hardware-e2e = []
# Adds the two-board ESP-NOW transport. BLE HID/management remains enabled on
# the Host firmware; both roles expose the wired management protocol.
espnow = ["ble", "esp-radio/coex", "esp-radio/esp-now", "esp-radio/wifi"]
# The PC-facing Device does not run BLE. Keeping the coexistence controller out
# of this image avoids initializing an unused BT controller before Wi-Fi.
espnow-device = ["esp-radio/esp-now", "esp-radio/wifi"]

[dependencies]
bt-hci = "0.8.1"
embassy-executor = "0.10.0"
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embassy-time = "0.5.1"
embassy-usb = "0.6.0"
embassy-usb-driver = "0.2.2"
embassy-usb-host = "0.1.0"
embassy-usb-synopsys-otg = { version = "0.4.0", features = ["host"] }
esp-alloc = { version = "0.10.0", default-features = false, features = ["compat", "esp32s3", "global-allocator"] }
esp-backtrace = { version = "0.19.0", default-features = false, features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
esp-hal = { version = "1.1.1", default-features = false, features = ["__bluetooth", "esp32s3", "rt", "unstable"] }
# Coexistence runs BLE on the second core. Keep logger output and the wired E2E
# management protocol from interleaving byte-by-byte across cores.
esp-println = { version = "0.17.0", default-features = false, features = ["critical-section", "esp32s3", "log-04", "uart"] }
# Wi-Fi/ESP-NOW is the two-board transport. Coexistence enables the controller
# scheduler while the routing policy still sends input to one selected PC.
esp-radio = { version = "1.0.0-beta.0", default-features = false, features = ["esp-alloc", "esp32s3", "log-04", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["embassy", "esp-alloc", "esp-radio", "esp32s3"] }
esp-storage = { version = "0.9.0", default-features = false, features = ["esp32s3"] }
esp-synopsys-usb-otg = "0.4.2"
hidshift = { path = ".." }
heapless = "0.9.2"
critical-section = "1.2.0"
log = "0.4.33"
# Hardware-E2E uses native-width atomics on the measured path; portable-atomic
# keeps that implementation available across the ESP and host toolchains.
portable-atomic = "1.13.1"
static_cell = "2.1.1"
trouble-host = { version = "0.6.0", default-features = false, features = ["default-packet-pool", "derive", "gatt", "log", "peripheral", "security"] }
