[package]
name = "hidshift-web"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[dependencies]
futures-channel = "0.3"
futures-util = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
hidshift = { path = "..", features = ["dual-s3-wired"] }
hidshift-client = { path = "../tools/hidshift-client" }
js-sys = "0.3"
leptos = { version = "0.8.20", features = ["csr"] }
send_wrapper = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Event",
  "EventTarget",
  "Clipboard",
  "MouseEvent",
  "Navigator",
  "Window",
] }
