[package]
name = "hidshift-mirror-runner"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hidshift = { path = "../..", features = ["dual-s3-wired", "hardware-e2e"] }
hidshift-client = { path = "../../tools/hidshift-client" }
serialport = { version = "4.8", default-features = false }
libc = "0.2"
rusb = "0.9"
