[package]
name = "hidshift-e2e"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
hidshift = { path = "../.." }
libc = "0.2.180"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serialport = "4.8.1"

[dev-dependencies]
tempfile = "3.24.0"
