[package]
name = "hidshiftctl"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[dependencies]
btleplug = "0.11"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
getrandom = "0.4"
hidshift = { path = "../.." }
hidshift-client = { path = "../hidshift-client" }
serialport = { version = "4.8", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
uuid = "1"
